# FLEXP

./: .gitignore  README.md  plot_results.py
examples/: SAFSL_experiment.py  fedasync_experiment.py  fedavg_experiment.py  (+4 more)
flsim/: pyproject.toml  requirements.txt
flsim/algorithms/: __init__.py  fedasync.py  fedavg.py  fedota.py  fedprox.py  safsl.py
flsim/allocators/: __init__.py  equal_split.py
flsim/channel/: __init__.py  conversions.py  exp_fading.py  fdma.py  path_loss.py
flsim/configs/: base.yaml  mnist_fedavg.yaml
flsim/core/: __init__.py  async_logger.py  async_simulator.py  client.py  evaluator.py  logger.py  server.py  simulator.py  split_async_simulator.py  split_client.py  split_simulator.py  training_utils.py
flsim/data/: __init__.py  dirichlet.py  iid.py  shard.py
flsim/data/loaders/: __init__.py  cifar10.py  cifar100.py  ham10000.py  mnist.py
flsim/experiments/: __init__.py  async_base.py  base.py  compare_algorithms.py  parameter_sweep.py  split_base.py  wiring.py
flsim/flsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flsim/interfaces/: __init__.py  algorithm.py  allocator.py  async_algorithm.py  channel_model.py  partitioner.py  split_async_algorithm.py  splittable.py  time_model.py
flsim/models/: __init__.py  alexnet.py  cifar_cnn.py  factory.py  mnist_cnn.py  resnet.py  vgg.py
flsim/profiles/: __init__.py  client_profile.py  factory.py
flsim/system/: __init__.py  cellular_time.py  energy.py  flops.py  ota.py  split_cost.py  split_model.py
flsim/tests/: test_channel.py  test_fedavg.py  test_partitions.py  test_system.py
(+6 files in other folders)
